[tool.poetry]
name = "nzse"
version = "0.1.0"
description = "new zhiland stock exchange"
authors = ["Kevin Zhang <kzhaaang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
