[tool.poetry]
name = "nzse"
version = "0.1.0"
description = "new zhiland stock exchange"
authors = ["Kevin Zhang <kzhaaang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.23"
pendulum = "^2.1.2"
requests = "^2.25.1"
PyYAML = "^5.4.1"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.800"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120